add picture output method

--- a/src/experiments/config_files/experiments_config.json
+++ b/src/experiments/config_files/experiments_config.json
@@ -2,26 +2,9 @@
 	"classification_types": ["multi"],
 	"experiment_dir_paths": ["../../data/phyphox/full recordings/"],
 	"experiment_dirs_selected": [["Ana-2", "Ariane", "Julian", "Wiktoria"]],
-	"use_indoor": [false, true],
-	"feature_calculation_settings": ["minimal", "efficient"],
+	"use_indoor": [false],
+	"feature_calculation_settings": ["minimal"],
 	"window_sizes": [50, 100],
 	"exclude":
-		[
-			{
-				"classification_types": ["multi"],
-				"experiment_dir_paths": ["../../data/phyphox/full recordings/"],
-				"experiment_dirs_selected": [["Ana-2", "Ariane", "Julian", "Wiktoria"]],
-				"use_indoor": [true],
-				"feature_calculation_settings": ["efficient","minimal"],
-				"window_sizes": [50,100]
-			},
-			{
-				"classification_types": ["multi"],
-				"experiment_dir_paths": ["../../data/phyphox/full recordings/"],
-				"experiment_dirs_selected": [["Ana-2", "Ariane", "Julian", "Wiktoria"]],
-				"use_indoor": [false],
-				"feature_calculation_settings": ["efficient"],
-				"window_sizes": [50,100]
-			}
-		]
+		[]
 }
