add binary classification to script

--- a/src/experiments/config_files/experiments_config.json
+++ b/src/experiments/config_files/experiments_config.json
@@ -1,12 +1,13 @@
 {
-	"classification_types": ["multi"],
+	"classification_types": ["binary", "multi"],
 	"experiment_dir_paths": ["./data/phyphox/full recordings/"],
 	"experiment_dirs_selected": [["Ana-2", "Ariane", "Julian", "Wiktoria"]],
+	"activities": [],
 	"use_indoor": [false, true],
 	"feature_calculation_settings": ["minimal"],
 	"window_sizes": [100],
 	"null_class_included": [true, false],
-	"right_hand_only": [true, false],
+	"right_hand_only": [false],
 	"exclude":
 		[]
 }
