--- a/src/experiments/config_files/experiments_config.json
+++ b/src/experiments/config_files/experiments_config.json
@@ -1,13 +1,13 @@
 {
-	"classification_types": ["binary"],
+	"classification_types": ["binary", "multiclass"],
 	"experiment_dir_paths": ["./data/phyphox/full recordings/"],
-	"experiment_dirs_selected": [["Ana-2", "Anne", "Ariane", "Cilly", "Fabi", "Julian", "Julius", "Wiktoria"]],
-	"activities": [["pulling door", "pushing door"]],
-	"use_indoor": [false, true],
-	"use_fingerprinting_approach": [false, true],
+	"experiment_dirs_selected": [["Ana-2", "Anne", "Ariane", "Cilly", "Fabi", "Jonas", "Julian", "Julius","Marvin", "Wiktoria"]],
+	"activities": [],
+	"use_indoor": [true],
+	"use_fingerprinting_approach": [true],
 	"feature_calculation_settings": ["minimal"],
 	"window_sizes": [50,100,200],
-	"null_class_included": [true],
+	"null_class_included": [true, false],
 	"right_hand_only": [false],
 	"exclude":
 		[]
