--- a/src/experiments/config_files/experiments_config.json
+++ b/src/experiments/config_files/experiments_config.json
@@ -1,13 +1,13 @@
 {
-	"classification_types": ["binary", "multiclass"],
+	"classification_types": ["binary"],
 	"experiment_dir_paths": ["./data/phyphox/full recordings/"],
-	"experiment_dirs_selected": [["Ana-2", "Anne", "Ariane", "Cilly", "Fabi", "Jonas", "Julian", "Julius","Marvin", "Wiktoria"]],
-	"activities": [],
+	"experiment_dirs_selected": [["Anne", "Anne2", "Anne3"]],
+	"activities": [["washing hands", "drying hands"], ["cleaning window", "cleaning table"], ["pulling door", "pushing door"]],
 	"use_indoor": [true],
 	"use_fingerprinting_approach": [true],
 	"feature_calculation_settings": ["minimal"],
-	"window_sizes": [50,100,200],
-	"null_class_included": [true, false],
+	"window_sizes": [100],
+	"null_class_included": [true],
 	"right_hand_only": [false],
 	"exclude":
 		[]
